<resources>

    <!-- Application specific configurations -->

    <string name="DATABASE_URL">35.229.17.244:3306</string>
    <string name="DATABASE_NAME">smartmirrorschema</string>
    <string name="DATABASE_USERNAME">joezie</string>
    <string name="DATABASE_PASSWORD">yigemima</string>
    <string name="PI_URL">192.168.137.195</string>
    <string name="PI_PORT">2540</string>
    <string name="CLOUD_URL">34.69.18.117</string>
    <string name="CLOUD_PORT">2540</string>

    <!-- Constants for UI -->

    <string name="app_name">DIY Mirror</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="one_step_left">Just one step left!</string>
    <string name="go_to_mirror">Username, just one step left! \n Please go to the smart mirror
        camera and press the camera button below to take photos of your face.</string>
    <string name="take_photo">Take photo</string>
    <string name="progress">Progress</string>
    <string name="cancel">Cancel</string>
    <string name="pos">Pos</string>
    <string name="position">position</string>
    <string name="pos1">Pos1</string>
    <string name="pos21">Pos21</string>
    <string name="pos22">Pos22</string>
    <string name="pos23">Pos23</string>
    <string name="pos3">Pos3</string>
    <string name="pos4">Pos4</string>
    <string name="pos5">Pos5</string>
    <string name="pos61">Pos61</string>
    <string name="pos62">Pos62</string>
    <string name="pos63">Pos63</string>
    <string name="pos7">Pos7</string>
    <string name="welcome_username">Welcome, Username!</string>
    <string name="log_out">Log out</string>
    <string name="plussign">PlusSign</string>
    <string name="configuration_name">Configuration Name</string>
    <string name="value">Value</string>
    <string name="module">Module</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="cameraicon">CameraIcon</string>=
    <string name="refer_to_youtube">refer to YouTube</string>


    <!-- Constants for Java -->

    <string name="add_module">AddModule</string>
    <string name="add_user">AddUser</string>
    <string name="remove_module">RemoveModule</string>
    <string name="update_module_config">UpdateModuleConfig</string>
    <string name="read_status_and_config">ReadStatusAndConfig</string>
    <string name="read_status">ReadStatus</string>
    <string name="read_pos_modules">ReadPosModules</string>
    <string name="read_range">ReadRange</string>
    <string name="match_username_and_password">MatchUsernameAndPassword</string>
    <string name="check_username">CheckUsername</string>
    <string name="JDBC_DRIVER">com.mysql.jdbc.Driver</string>
    <string name="JDBC_PREFIX">jdbc:mysql://</string>
    <string name="user_module_table">smartmirrorschema.user_module_table</string>
    <string name="range_table">smartmirrorschema.range_table</string>
    <string name="user_preference">UsernamePreference</string>
    <string name="undefined">Undefined</string>
    <string name="default_module">DefaultModule</string>
    <string name="fieldName">fieldName</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="EMPTY">EMPTY</string>
    <string name="existence">existence</string>
    <string name="matched">matched</string>
    <string name="ERROR">ERROR</string>
    <string name="SUCCESS">SUCCESS</string>
    <string name="OK">OK</string>
    <string name="collecting_and_running">Collecting and training dataset…</string>
    <string name="collection_success">Collection success!</string>
    <string name="collection_failed">Collection failed!</string>
    <string name="username_not_existed_message">The username not existed!</string>
    <string name="username_not_existed_tag">USERNAME_NOT_EXISTED</string>
    <string name="password_not_matched_message">Incorrect password!</string>
    <string name="password_not_matched_tag">INCORRECT_PASSWORD</string>
    <string name="username_already_existed_message">This username already existed!</string>
    <string name="username_already_existed_tag">USERNAME_ALREADY_EXISTED</string>
    <string name="two_passwords_not_euqal_message">Password not match Confirmed Password!</string>
    <string name="two_passwords_not_euqal_tag">TWO_PASSWORDS_NOT_EQUAL</string>
    <string name="fields_empty_message">Please fill in all fields!</string>
    <string name="fields_empty_tag">FIELDS_EMPTY</string>
    <string name="register_success_message">Registration success! Please login now.</string>
    <string name="register_success_tag">REGISTER_SUCCESS</string>
    <string name="register_failed_message">Photo collection failed. Please try again.</string>
    <string name="register_failed_tag">REGISTER_FAILED</string>
    <string name="module_update_success_message">Update module success!</string>
    <string name="module_update_success_tag">MODULE_UPDATE_SUCCESS</string>
    <string name="module_update_failed_message">Update module failed!</string>
    <string name="module_update_failed_tag">MODULE_UPDATE_FAILED</string>
    <string name="module_add_success_message">Add module success!</string>
    <string name="module_add_success_tag">MODULE_ADD_SUCCESS</string>
    <string name="module_add_failed_message">Add module failed!</string>
    <string name="module_add_failed_tag">MODULE_ADD_FAILED</string>
    <string name="module_remove_success_message">Remove module success!</string>
    <string name="module_remove_success_tag">MODULE_REMOVE_SUCCESS</string>
    <string name="module_remove_failed_message">Remove module failed!</string>
    <string name="module_remove_failed_tag">MODULE_REMOVE_FAILED</string>
    <string name="PHOTO_COLLECTION">1</string>
    <string name="REFRESH">2</string>
    <string name="MODULE_UPDATE">1</string>
    <string name="RELOAD_FAILED">-1</string>
    <string name="USER_MISMATCHED">0</string>
    <string name="USER_MATCHED">1</string>
    <string name="ENCRYPT_KEY">eNCrypTD1YM1RR0R</string>
    <string name="ENCRYPT_ALGO">AES</string>


    <!-- String Arrays -->

    <string-array name="moduleNames">
        <item>youtube_module</item>
        <item>stock_module</item>
        <item>covid_module</item>
    </string-array>

    <string-array name="tableNames">
        <item>smartmirrorschema.youtube_module_config_table</item>
        <item>smartmirrorschema.stock_module_config_table</item>
        <item>smartmirrorschema.covid_module_config_table</item>
    </string-array>

</resources>
