<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhotoCollectionActivity">

    <TextView
        android:id="@+id/goToMirrorText_collection"
        android:layout_width="257dp"
        android:layout_height="54dp"
        android:layout_marginTop="128dp"
        android:text="@string/go_to_mirror"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/takePhotoBtn_collection"
        android:layout_width="103dp"
        android:layout_height="42dp"
        android:background="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/cameraicon" />

    <TextView
        android:id="@+id/progressText_collection"
        android:layout_width="144dp"
        android:layout_height="184dp"
        android:layout_marginTop="28dp"
        android:text="@string/progress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/takePhotoBtn_collection" />

</androidx.constraintlayout.widget.ConstraintLayout>